// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollapsibleNav renders links grouped by category 1`] = `
<CollapsibleNav
  appId$={
    BehaviorSubject {
      "_isScalar": false,
      "_value": "test",
      "closed": false,
      "hasError": false,
      "isStopped": false,
      "observers": Array [
        Subscriber {
          "_parentOrParents": null,
          "_subscriptions": Array [
            SubjectSubscription {
              "_parentOrParents": [Circular],
              "_subscriptions": null,
              "closed": false,
              "subject": [Circular],
              "subscriber": [Circular],
            },
          ],
          "closed": false,
          "destination": SafeSubscriber {
            "_complete": undefined,
            "_context": [Circular],
            "_error": undefined,
            "_next": [Function],
            "_parentOrParents": null,
            "_parentSubscriber": [Circular],
            "_subscriptions": null,
            "closed": false,
            "destination": Object {
              "closed": true,
              "complete": [Function],
              "error": [Function],
              "next": [Function],
            },
            "isStopped": false,
            "syncErrorThrowable": false,
            "syncErrorThrown": false,
            "syncErrorValue": null,
          },
          "isStopped": false,
          "syncErrorThrowable": true,
          "syncErrorThrown": false,
          "syncErrorValue": null,
        },
      ],
      "thrownError": null,
    }
  }
  basePath={
    BasePath {
      "basePath": "/test",
      "get": [Function],
      "prepend": [Function],
      "publicBaseUrl": undefined,
      "remove": [Function],
      "serverBasePath": "/test",
    }
  }
  button={<button />}
  closeNav={[Function]}
  customNavLink$={
    BehaviorSubject {
      "_isScalar": false,
      "_value": Object {
        "baseUrl": "/",
        "category": undefined,
        "data-test-subj": "Custom link",
        "href": "Custom link",
        "id": "Custom link",
        "isActive": true,
        "title": "Custom link",
        "url": "/",
      },
      "closed": false,
      "hasError": false,
      "isStopped": false,
      "observers": Array [
        Subscriber {
          "_parentOrParents": null,
          "_subscriptions": Array [
            SubjectSubscription {
              "_parentOrParents": [Circular],
              "_subscriptions": null,
              "closed": false,
              "subject": [Circular],
              "subscriber": [Circular],
            },
          ],
          "closed": false,
          "destination": SafeSubscriber {
            "_complete": undefined,
            "_context": [Circular],
            "_error": undefined,
            "_next": [Function],
            "_parentOrParents": null,
            "_parentSubscriber": [Circular],
            "_subscriptions": null,
            "closed": false,
            "destination": Object {
              "closed": true,
              "complete": [Function],
              "error": [Function],
              "next": [Function],
            },
            "isStopped": false,
            "syncErrorThrowable": false,
            "syncErrorThrown": false,
            "syncErrorValue": null,
          },
          "isStopped": false,
          "syncErrorThrowable": true,
          "syncErrorThrown": false,
          "syncErrorValue": null,
        },
      ],
      "thrownError": null,
    }
  }
  homeHref="/"
  id="collapsibe-nav"
  isLocked={false}
  isNavOpen={true}
  navLinks$={
    BehaviorSubject {
      "_isScalar": false,
      "_value": Array [
        Object {
          "baseUrl": "/",
          "category": Object {
            "euiIconType": "logoKibana",
            "id": "kibana",
            "label": "Analytics",
            "order": 1000,
          },
          "data-test-subj": "discover",
          "href": "discover",
          "id": "discover",
          "isActive": true,
          "title": "discover",
          "url": "/",
        },
        Object {
          "baseUrl": "/",
          "category": Object {
            "euiIconType": "logoSecurity",
            "id": "securitySolution",
            "label": "Security",
            "order": 4000,
          },
          "data-test-subj": "siem",
          "href": "siem",
          "id": "siem",
          "isActive": true,
          "title": "siem",
          "url": "/",
        },
        Object {
          "baseUrl": "/",
          "category": Object {
            "euiIconType": "logoObservability",
            "id": "observability",
            "label": "Observability",
            "order": 3000,
          },
          "data-test-subj": "metrics",
          "href": "metrics",
          "id": "metrics",
          "isActive": true,
          "title": "metrics",
          "url": "/",
        },
        Object {
          "baseUrl": "/",
          "category": Object {
            "euiIconType": "managementApp",
            "id": "management",
            "label": "Management",
            "order": 5000,
          },
          "data-test-subj": "monitoring",
          "href": "monitoring",
          "id": "monitoring",
          "isActive": true,
          "title": "monitoring",
          "url": "/",
        },
        Object {
          "baseUrl": "/",
          "category": Object {
            "euiIconType": "logoKibana",
            "id": "kibana",
            "label": "Analytics",
            "order": 1000,
          },
          "data-test-subj": "visualize",
          "href": "visualize",
          "id": "visualize",
          "isActive": true,
          "title": "visualize",
          "url": "/",
        },
        Object {
          "baseUrl": "/",
          "category": Object {
            "euiIconType": "logoKibana",
            "id": "kibana",
            "label": "Analytics",
            "order": 1000,
          },
          "data-test-subj": "dashboard",
          "href": "dashboard",
          "id": "dashboard",
          "isActive": true,
          "title": "dashboard",
          "url": "/",
        },
        Object {
          "baseUrl": "/",
          "category": undefined,
          "data-test-subj": "canvas",
          "href": "canvas",
          "id": "canvas",
          "isActive": true,
          "title": "canvas",
          "url": "/",
        },
        Object {
          "baseUrl": "/",
          "category": Object {
            "euiIconType": "logoObservability",
            "id": "observability",
            "label": "Observability",
            "order": 3000,
          },
          "data-test-subj": "logs",
          "href": "logs",
          "id": "logs",
          "isActive": true,
          "title": "logs",
          "url": "/",
        },
      ],
      "closed": false,
      "hasError": false,
      "isStopped": false,
      "observers": Array [
        Subscriber {
          "_parentOrParents": null,
          "_subscriptions": Array [
            SubjectSubscription {
              "_parentOrParents": [Circular],
              "_subscriptions": null,
              "closed": false,
              "subject": [Circular],
              "subscriber": [Circular],
            },
          ],
          "closed": false,
          "destination": SafeSubscriber {
            "_complete": undefined,
            "_context": [Circular],
            "_error": undefined,
            "_next": [Function],
            "_parentOrParents": null,
            "_parentSubscriber": [Circular],
            "_subscriptions": null,
            "closed": false,
            "destination": Object {
              "closed": true,
              "complete": [Function],
              "error": [Function],
              "next": [Function],
            },
            "isStopped": false,
            "syncErrorThrowable": false,
            "syncErrorThrown": false,
            "syncErrorValue": null,
          },
          "isStopped": false,
          "syncErrorThrowable": true,
          "syncErrorThrown": false,
          "syncErrorValue": null,
        },
      ],
      "thrownError": null,
    }
  }
  navigateToApp={[Function]}
  navigateToUrl={[Function]}
  onIsLockedUpdate={[Function]}
  recentlyAccessed$={
    BehaviorSubject {
      "_isScalar": false,
      "_value": Array [
        Object {
          "id": "recent 1",
          "label": "recent 1",
          "link": "recent 1",
        },
        Object {
          "id": "recent 2",
          "label": "recent 2",
          "link": "recent 2",
        },
      ],
      "closed": false,
      "hasError": false,
      "isStopped": false,
      "observers": Array [
        Subscriber {
          "_parentOrParents": null,
          "_subscriptions": Array [
            SubjectSubscription {
              "_parentOrParents": [Circular],
              "_subscriptions": null,
              "closed": false,
              "subject": [Circular],
              "subscriber": [Circular],
            },
          ],
          "closed": false,
          "destination": SafeSubscriber {
            "_complete": undefined,
            "_context": [Circular],
            "_error": undefined,
            "_next": [Function],
            "_parentOrParents": null,
            "_parentSubscriber": [Circular],
            "_subscriptions": null,
            "closed": false,
            "destination": Object {
              "closed": true,
              "complete": [Function],
              "error": [Function],
              "next": [Function],
            },
            "isStopped": false,
            "syncErrorThrowable": false,
            "syncErrorThrown": false,
            "syncErrorValue": null,
          },
          "isStopped": false,
          "syncErrorThrowable": true,
          "syncErrorThrown": false,
          "syncErrorValue": null,
        },
      ],
      "thrownError": null,
    }
  }
  storage={
    StubBrowserStorage {
      "keys": Array [],
      "size": 0,
      "sizeLimit": 5000000,
      "values": Array [],
    }
  }
  url="/"
>
  <EuiCollapsibleNav
    aria-label="Primary"
    button={<button />}
    data-test-subj="collapsibleNav"
    id="collapsibe-nav"
    isOpen={true}
    onClose={[Function]}
    ownFocus={false}
    size={248}
  >
    <button
      aria-controls="collapsibe-nav"
      aria-expanded={true}
      aria-pressed={true}
      onMouseUpCapture={[Function]}
      onTouchEnd={[Function]}
    />
    <EuiFlyout
      aria-label="Primary"
      as="nav"
      className="euiCollapsibleNav"
      closeButtonPosition="outside"
      data-test-subj="collapsibleNav"
      hideCloseButton={false}
      id="collapsibe-nav"
      onClose={[Function]}
      outsideClickCloses={true}
      ownFocus={false}
      paddingSize="none"
      pushMinBreakpoint="l"
      role={null}
      side="left"
      size={248}
      type="overlay"
    >
      <nav
        data-eui="EuiFlyout"
        data-test-subj="collapsibleNav"
        role={null}
      >
        <button
          aria-label="Close this dialog"
          data-test-subj="euiFlyoutCloseButton"
          onClick={[Function]}
          type="button"
        />
        <EuiFlexItem
          grow={false}
          style={
            Object {
              "flexShrink": 0,
            }
          }
        >
          <div
            className="euiFlexItem euiFlexItem--flexGrowZero"
            style={
              Object {
                "flexShrink": 0,
              }
            }
          >
            <EuiCollapsibleNavGroup
              background="dark"
              className="eui-yScroll"
              style={
                Object {
                  "maxHeight": "40vh",
                }
              }
            >
              <div
                className="euiCollapsibleNavGroup euiCollapsibleNavGroup--dark eui-yScroll"
                id="generated-id"
                style={
                  Object {
                    "maxHeight": "40vh",
                  }
                }
              >
                <div
                  className="euiCollapsibleNavGroup__children"
                >
                  <EuiListGroup
                    color="ghost"
                    gutterSize="none"
                    listItems={
                      Array [
                        Object {
                          "data-test-subj": "collapsibleNavCustomNavLink",
                          "href": "Custom link",
                          "icon": undefined,
                          "iconProps": Object {
                            "color": "ghost",
                          },
                          "iconType": undefined,
                          "isActive": false,
                          "isDisabled": undefined,
                          "label": "Custom link",
                          "onClick": [Function],
                        },
                      ]
                    }
                    maxWidth="none"
                    size="s"
                  >
                    <ul
                      className="euiListGroup"
                      style={
                        Object {
                          "maxWidth": "none",
                        }
                      }
                    >
                      <EuiListGroupItem
                        color="ghost"
                        data-test-subj="collapsibleNavCustomNavLink"
                        href="Custom link"
                        iconProps={
                          Object {
                            "color": "ghost",
                          }
                        }
                        isActive={false}
                        key="title-0"
                        label="Custom link"
                        onClick={[Function]}
                        showToolTip={false}
                        size="s"
                        wrapText={false}
                      >
                        <li
                          className="euiListGroupItem euiListGroupItem--small euiListGroupItem--ghost euiListGroupItem-isClickable"
                        >
                          <a
                            className="euiListGroupItem__button"
                            data-test-subj="collapsibleNavCustomNavLink"
                            href="Custom link"
                            onClick={[Function]}
                            rel="noreferrer"
                          >
                            <span
                              className="euiListGroupItem__label"
                              title="Custom link"
                            >
                              Custom link
                            </span>
                          </a>
                        </li>
                      </EuiListGroupItem>
                    </ul>
                  </EuiListGroup>
                </div>
              </div>
            </EuiCollapsibleNavGroup>
          </div>
        </EuiFlexItem>
        <EuiHorizontalRule
          margin="none"
        >
          <hr
            className="euiHorizontalRule euiHorizontalRule--full"
          />
        </EuiHorizontalRule>
        <EuiFlexItem
          grow={false}
          style={
            Object {
              "flexShrink": 0,
            }
          }
        >
          <div
            className="euiFlexItem euiFlexItem--flexGrowZero"
            style={
              Object {
                "flexShrink": 0,
              }
            }
          >
            <EuiCollapsibleNavGroup
              background="light"
              className="eui-yScroll"
              style={
                Object {
                  "maxHeight": "40vh",
                }
              }
            >
              <div
                className="euiCollapsibleNavGroup euiCollapsibleNavGroup--light eui-yScroll"
                id="generated-id"
                style={
                  Object {
                    "maxHeight": "40vh",
                  }
                }
              >
                <div
                  className="euiCollapsibleNavGroup__children"
                >
                  <EuiListGroup
                    aria-label="Pinned links"
                    color="text"
                    gutterSize="none"
                    listItems={
                      Array [
                        Object {
                          "data-test-subj": "homeLink",
                          "href": "/",
                          "iconType": "home",
                          "isActive": false,
                          "label": "Home",
                          "onClick": [Function],
                        },
                      ]
                    }
                    maxWidth="none"
                    size="s"
                  >
                    <ul
                      aria-label="Pinned links"
                      className="euiListGroup"
                      style={
                        Object {
                          "maxWidth": "none",
                        }
                      }
                    >
                      <EuiListGroupItem
                        color="text"
                        data-test-subj="homeLink"
                        href="/"
                        iconType="home"
                        isActive={false}
                        key="title-0"
                        label="Home"
                        onClick={[Function]}
                        showToolTip={false}
                        size="s"
                        wrapText={false}
                      >
                        <li
                          className="euiListGroupItem euiListGroupItem--small euiListGroupItem--text euiListGroupItem-isClickable"
                        >
                          <a
                            className="euiListGroupItem__button"
                            data-test-subj="homeLink"
                            href="/"
                            onClick={[Function]}
                            rel="noreferrer"
                          >
                            <EuiIcon
                              className="euiListGroupItem__icon"
                              color="inherit"
                              type="home"
                            >
                              <span
                                className="euiListGroupItem__icon"
                                color="inherit"
                                data-euiicon-type="home"
                              />
                            </EuiIcon>
                            <span
                              className="euiListGroupItem__label"
                              title="Home"
                            >
                              Home
                            </span>
                          </a>
                        </li>
                      </EuiListGroupItem>
                    </ul>
                  </EuiListGroup>
                </div>
              </div>
            </EuiCollapsibleNavGroup>
          </div>
        </EuiFlexItem>
        <EuiCollapsibleNavGroup
          background="light"
          data-test-subj="collapsibleNavGroup-recentlyViewed"
          initialIsOpen={true}
          isCollapsible={true}
          key="recentlyViewed"
          onToggle={[Function]}
          title="Recently viewed"
        >
          <EuiAccordion
            arrowDisplay="right"
            arrowProps={
              Object {
                "color": "text",
              }
            }
            buttonClassName="euiCollapsibleNavGroup__heading"
            buttonContent={
              <EuiFlexGroup
                alignItems="center"
                gutterSize="m"
                responsive={false}
              >
                <EuiFlexItem>
                  <EuiTitle
                    size="xxs"
                  >
                    <h3
                      className="euiCollapsibleNavGroup__title"
                      id="generated-id__title"
                    >
                      Recently viewed
                    </h3>
                  </EuiTitle>
                </EuiFlexItem>
              </EuiFlexGroup>
            }
            buttonElement="button"
            className="euiCollapsibleNavGroup euiCollapsibleNavGroup--light euiCollapsibleNavGroup--withHeading"
            data-test-subj="collapsibleNavGroup-recentlyViewed"
            element="div"
            id="generated-id"
            initialIsOpen={true}
            isLoading={false}
            isLoadingMessage={false}
            onToggle={[Function]}
            paddingSize="none"
          >
            <div
              className="euiAccordion euiAccordion-isOpen euiCollapsibleNavGroup euiCollapsibleNavGroup--light euiCollapsibleNavGroup--withHeading"
              data-test-subj="collapsibleNavGroup-recentlyViewed"
              onToggle={[Function]}
            >
              <div
                className="euiAccordion__triggerWrapper"
              >
                <button
                  aria-controls="generated-id"
                  aria-expanded={true}
                  className="euiAccordion__button euiCollapsibleNavGroup__heading"
                  id="generated-id"
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="euiAccordion__buttonContent"
                  >
                    <EuiFlexGroup
                      alignItems="center"
                      gutterSize="m"
                      responsive={false}
                    >
                      <div
                        className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
                      >
                        <EuiFlexItem>
                          <div
                            className="euiFlexItem"
                          >
                            <EuiTitle
                              size="xxs"
                            >
                              <h3
                                className="euiTitle euiTitle--xxsmall euiCollapsibleNavGroup__title"
                                id="generated-id__title"
                              >
                                Recently viewed
                              </h3>
                            </EuiTitle>
                          </div>
                        </EuiFlexItem>
                      </div>
                    </EuiFlexGroup>
                  </span>
                </button>
                <EuiButtonIcon
                  aria-controls="generated-id"
                  aria-expanded={true}
                  aria-labelledby="generated-id"
                  className="euiAccordion__iconButton euiAccordion__iconButton-isOpen euiAccordion__iconButton--right"
                  color="text"
                  iconType="arrowRight"
                  onClick={[Function]}
                  tabIndex={-1}
                >
                  <button
                    aria-controls="generated-id"
                    aria-expanded={true}
                    aria-labelledby="generated-id"
                    className="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiAccordion__iconButton euiAccordion__iconButton-isOpen euiAccordion__iconButton--right"
                    onClick={[Function]}
                    tabIndex={-1}
                    type="button"
                  >
                    <EuiIcon
                      aria-hidden="true"
                      className="euiButtonIcon__icon"
                      color="inherit"
                      size="m"
                      type="arrowRight"
                    >
                      <span
                        aria-hidden="true"
                        className="euiButtonIcon__icon"
                        color="inherit"
                        data-euiicon-type="arrowRight"
                        size="m"
                      />
                    </EuiIcon>
                  </button>
                </EuiButtonIcon>
              </div>
              <div
                aria-labelledby="generated-id"
                className="euiAccordion__childWrapper"
                id="generated-id"
                role="region"
                tabIndex={-1}
              >
                <EuiResizeObserver
                  onResize={[Function]}
                >
                  <div>
                    <div>
                      <div
                        className="euiCollapsibleNavGroup__children"
                      >
                        <EuiListGroup
                          aria-label="Recently viewed links"
                          className="kbnCollapsibleNav__recentsListGroup"
                          color="subdued"
                          gutterSize="none"
                          listItems={
                            Array [
                              Object {
                                "aria-label": "recent 1",
                                "data-test-subj": "collapsibleNavAppLink--recent",
                                "href": "http://localhost/recent%201",
                                "label": "recent 1",
                                "onClick": [Function],
                                "title": "recent 1",
                              },
                              Object {
                                "aria-label": "recent 2",
                                "data-test-subj": "collapsibleNavAppLink--recent",
                                "href": "http://localhost/recent%202",
                                "label": "recent 2",
                                "onClick": [Function],
                                "title": "recent 2",
                              },
                            ]
                          }
                          maxWidth="none"
                          size="s"
                        >
                          <ul
                            aria-label="Recently viewed links"
                            className="euiListGroup kbnCollapsibleNav__recentsListGroup"
                            style={
                              Object {
                                "maxWidth": "none",
                              }
                            }
                          >
                            <EuiListGroupItem
                              aria-label="recent 1"
                              color="subdued"
                              data-test-subj="collapsibleNavAppLink--recent"
                              href="http://localhost/recent%201"
                              key="title-0"
                              label="recent 1"
                              onClick={[Function]}
                              showToolTip={false}
                              size="s"
                              title="recent 1"
                              wrapText={false}
                            >
                              <li
                                className="euiListGroupItem euiListGroupItem--small euiListGroupItem--subdued euiListGroupItem-isClickable"
                              >
                                <a
                                  aria-label="recent 1"
                                  className="euiListGroupItem__button"
                                  data-test-subj="collapsibleNavAppLink--recent"
                                  href="http://localhost/recent%201"
                                  onClick={[Function]}
                                  rel="noreferrer"
                                  title="recent 1"
                                >
                                  <span
                                    className="euiListGroupItem__label"
                                    title="recent 1"
                                  >
                                    recent 1
                                  </span>
                                </a>
                              </li>
                            </EuiListGroupItem>
                            <EuiListGroupItem
                              aria-label="recent 2"
                              color="subdued"
                              data-test-subj="collapsibleNavAppLink--recent"
                              href="http://localhost/recent%202"
                              key="title-1"
                              label="recent 2"
                              onClick={[Function]}
                              showToolTip={false}
                              size="s"
                              title="recent 2"
                              wrapText={false}
                            >
                              <li
                                className="euiListGroupItem euiListGroupItem--small euiListGroupItem--subdued euiListGroupItem-isClickable"
                              >
                                <a
                                  aria-label="recent 2"
                                  className="euiListGroupItem__button"
                                  data-test-subj="collapsibleNavAppLink--recent"
                                  href="http://localhost/recent%202"
                                  onClick={[Function]}
                                  rel="noreferrer"
                                  title="recent 2"
                                >
                                  <span
                                    className="euiListGroupItem__label"
                                    title="recent 2"
                                  >
                                    recent 2
                                  </span>
                                </a>
                              </li>
                            </EuiListGroupItem>
                          </ul>
                        </EuiListGroup>
                      </div>
                    </div>
                  </div>
                </EuiResizeObserver>
              </div>
            </div>
          </EuiAccordion>
        </EuiCollapsibleNavGroup>
        <EuiHorizontalRule
          margin="none"
        >
          <hr
            className="euiHorizontalRule euiHorizontalRule--full"
          />
        </EuiHorizontalRule>
        <EuiFlexItem
          className="eui-yScroll"
        >
          <div
            className="euiFlexItem eui-yScroll"
          >
            <EuiCollapsibleNavGroup
              buttonClassName="kbnCollapsibleNav__solutionGroupButton"
              buttonElement="button"
              data-test-subj="collapsibleNavGroup-kibana"
              iconSize="m"
              iconType="logoKibana"
              initialIsOpen={true}
              isCollapsible={true}
              key="kibana"
              onToggle={[Function]}
              title="Analytics"
            >
              <EuiAccordion
                arrowDisplay="right"
                arrowProps={
                  Object {
                    "color": "text",
                  }
                }
                buttonClassName="kbnCollapsibleNav__solutionGroupButton"
                buttonContent={
                  <EuiFlexGroup
                    alignItems="center"
                    gutterSize="m"
                    responsive={false}
                  >
                    <EuiFlexItem
                      grow={false}
                    >
                      <EuiIcon
                        size="m"
                        type="logoKibana"
                      />
                    </EuiFlexItem>
                    <EuiFlexItem>
                      <EuiTitle
                        size="xxs"
                      >
                        <h3
                          className="euiCollapsibleNavGroup__title"
                          id="generated-id__title"
                        >
                          Analytics
                        </h3>
                      </EuiTitle>
                    </EuiFlexItem>
                  </EuiFlexGroup>
                }
                buttonElement="button"
                className="euiCollapsibleNavGroup euiCollapsibleNavGroup--withHeading"
                data-test-subj="collapsibleNavGroup-kibana"
                element="div"
                id="generated-id"
                initialIsOpen={true}
                isLoading={false}
                isLoadingMessage={false}
                onToggle={[Function]}
                paddingSize="none"
              >
                <div
                  className="euiAccordion euiAccordion-isOpen euiCollapsibleNavGroup euiCollapsibleNavGroup--withHeading"
                  data-test-subj="collapsibleNavGroup-kibana"
                  onToggle={[Function]}
                >
                  <div
                    className="euiAccordion__triggerWrapper"
                  >
                    <button
                      aria-controls="generated-id"
                      aria-expanded={true}
                      className="euiAccordion__button kbnCollapsibleNav__solutionGroupButton"
                      id="generated-id"
                      onClick={[Function]}
                      type="button"
                    >
                      <span
                        className="euiAccordion__buttonContent"
                      >
                        <EuiFlexGroup
                          alignItems="center"
                          gutterSize="m"
                          responsive={false}
                        >
                          <div
                            className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
                          >
                            <EuiFlexItem
                              grow={false}
                            >
                              <div
                                className="euiFlexItem euiFlexItem--flexGrowZero"
                              >
                                <EuiIcon
                                  size="m"
                                  type="logoKibana"
                                >
                                  <span
                                    data-euiicon-type="logoKibana"
                                    size="m"
                                  />
                                </EuiIcon>
                              </div>
                            </EuiFlexItem>
                            <EuiFlexItem>
                              <div
                                className="euiFlexItem"
                              >
                                <EuiTitle
                                  size="xxs"
                                >
                                  <h3
                                    className="euiTitle euiTitle--xxsmall euiCollapsibleNavGroup__title"
                                    id="generated-id__title"
                                  >
                                    Analytics
                                  </h3>
                                </EuiTitle>
                              </div>
                            </EuiFlexItem>
                          </div>
                        </EuiFlexGroup>
                      </span>
                    </button>
                    <EuiButtonIcon
                      aria-controls="generated-id"
                      aria-expanded={true}
                      aria-labelledby="generated-id"
                      className="euiAccordion__iconButton euiAccordion__iconButton-isOpen euiAccordion__iconButton--right"
                      color="text"
                      iconType="arrowRight"
                      onClick={[Function]}
                      tabIndex={-1}
                    >
                      <button
                        aria-controls="generated-id"
                        aria-expanded={true}
                        aria-labelledby="generated-id"
                        className="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiAccordion__iconButton euiAccordion__iconButton-isOpen euiAccordion__iconButton--right"
                        onClick={[Function]}
                        tabIndex={-1}
                        type="button"
                      >
                        <EuiIcon
                          aria-hidden="true"
                          className="euiButtonIcon__icon"
                          color="inherit"
                          size="m"
                          type="arrowRight"
                        >
                          <span
                            aria-hidden="true"
                            className="euiButtonIcon__icon"
                            color="inherit"
                            data-euiicon-type="arrowRight"
                            size="m"
                          />
                        </EuiIcon>
                      </button>
                    </EuiButtonIcon>
                  </div>
                  <div
                    aria-labelledby="generated-id"
                    className="euiAccordion__childWrapper"
                    id="generated-id"
                    role="region"
                    tabIndex={-1}
                  >
                    <EuiResizeObserver
                      onResize={[Function]}
                    >
                      <div>
                        <div>
                          <div
                            className="euiCollapsibleNavGroup__children"
                          >
                            <EuiListGroup
                              aria-label="Primary navigation links, Analytics"
                              color="subdued"
                              gutterSize="none"
                              listItems={
                                Array [
                                  Object {
                                    "data-test-subj": "collapsibleNavAppLink",
                                    "href": "discover",
                                    "isActive": false,
                                    "isDisabled": undefined,
                                    "label": "discover",
                                    "onClick": [Function],
                                  },
                                  Object {
                                    "data-test-subj": "collapsibleNavAppLink",
                                    "href": "visualize",
                                    "isActive": false,
                                    "isDisabled": undefined,
                                    "label": "visualize",
                                    "onClick": [Function],
                                  },
                                  Object {
                                    "data-test-subj": "collapsibleNavAppLink",
                                    "href": "dashboard",
                                    "isActive": false,
                                    "isDisabled": undefined,
                                    "label": "dashboard",
                                    "onClick": [Function],
                                  },
                                ]
                              }
                              maxWidth="none"
                              size="s"
                            >
                              <ul
                                aria-label="Primary navigation links, Analytics"
                                className="euiListGroup"
                                style={
                                  Object {
                                    "maxWidth": "none",
                                  }
                                }
                              >
                                <EuiListGroupItem
                                  color="subdued"
                                  data-test-subj="collapsibleNavAppLink"
                                  href="discover"
                                  isActive={false}
                                  key="title-0"
                                  label="discover"
                                  onClick={[Function]}
                                  showToolTip={false}
                                  size="s"
                                  wrapText={false}
                                >
                                  <li
                                    className="euiListGroupItem euiListGroupItem--small euiListGroupItem--subdued euiListGroupItem-isClickable"
                                  >
                                    <a
                                      className="euiListGroupItem__button"
                                      data-test-subj="collapsibleNavAppLink"
                                      href="discover"
                                      onClick={[Function]}
                                      rel="noreferrer"
                                    >
                                      <span
                                        className="euiListGroupItem__label"
                                        title="discover"
                                      >
                                        discover
                                      </span>
                                    </a>
                                  </li>
                                </EuiListGroupItem>
                                <EuiListGroupItem
                                  color="subdued"
                                  data-test-subj="collapsibleNavAppLink"
                                  href="visualize"
                                  isActive={false}
                                  key="title-1"
                                  label="visualize"
                                  onClick={[Function]}
                                  showToolTip={false}
                                  size="s"
                                  wrapText={false}
                                >
                                  <li
                                    className="euiListGroupItem euiListGroupItem--small euiListGroupItem--subdued euiListGroupItem-isClickable"
                                  >
                                    <a
                                      className="euiListGroupItem__button"
                                      data-test-subj="collapsibleNavAppLink"
                                      href="visualize"
                                      onClick={[Function]}
                                      rel="noreferrer"
                                    >
                                      <span
                                        className="euiListGroupItem__label"
                                        title="visualize"
                                      >
                                        visualize
                                      </span>
                                    </a>
                                  </li>
                                </EuiListGroupItem>
                                <EuiListGroupItem
                                  color="subdued"
                                  data-test-subj="collapsibleNavAppLink"
                                  href="dashboard"
                                  isActive={false}
                                  key="title-2"
                                  label="dashboard"
                                  onClick={[Function]}
                                  showToolTip={false}
                                  size="s"
                                  wrapText={false}
                                >
                                  <li
                                    className="euiListGroupItem euiListGroupItem--small euiListGroupItem--subdued euiListGroupItem-isClickable"
                                  >
                                    <a
                                      className="euiListGroupItem__button"
                                      data-test-subj="collapsibleNavAppLink"
                                      href="dashboard"
                                      onClick={[Function]}
                                      rel="noreferrer"
                                    >
                                      <span
                                        className="euiListGroupItem__label"
                                        title="dashboard"
                                      >
                                        dashboard
                                      </span>
                                    </a>
                                  </li>
                                </EuiListGroupItem>
                              </ul>
                            </EuiListGroup>
                          </div>
                        </div>
                      </div>
                    </EuiResizeObserver>
                  </div>
                </div>
              </EuiAccordion>
            </EuiCollapsibleNavGroup>
            <EuiCollapsibleNavGroup
              buttonClassName="kbnCollapsibleNav__solutionGroupButton"
              buttonElement="button"
              data-test-subj="collapsibleNavGroup-observability"
              iconSize="m"
              iconType="logoObservability"
              initialIsOpen={true}
              isCollapsible={true}
              key="observability"
              onToggle={[Function]}
              title="Observability"
            >
              <EuiAccordion
                arrowDisplay="right"
                arrowProps={
                  Object {
                    "color": "text",
                  }
                }
                buttonClassName="kbnCollapsibleNav__solutionGroupButton"
                buttonContent={
                  <EuiFlexGroup
                    alignItems="center"
                    gutterSize="m"
                    responsive={false}
                  >
                    <EuiFlexItem
                      grow={false}
                    >
                      <EuiIcon
                        size="m"
                        type="logoObservability"
                      />
                    </EuiFlexItem>
                    <EuiFlexItem>
                      <EuiTitle
                        size="xxs"
                      >
                        <h3
                          className="euiCollapsibleNavGroup__title"
                          id="generated-id__title"
                        >
                          Observability
                        </h3>
                      </EuiTitle>
                    </EuiFlexItem>
                  </EuiFlexGroup>
                }
                buttonElement="button"
                className="euiCollapsibleNavGroup euiCollapsibleNavGroup--withHeading"
                data-test-subj="collapsibleNavGroup-observability"
                element="div"
                id="generated-id"
                initialIsOpen={true}
                isLoading={false}
                isLoadingMessage={false}
                onToggle={[Function]}
                paddingSize="none"
              >
                <div
                  className="euiAccordion euiAccordion-isOpen euiCollapsibleNavGroup euiCollapsibleNavGroup--withHeading"
                  data-test-subj="collapsibleNavGroup-observability"
                  onToggle={[Function]}
                >
                  <div
                    className="euiAccordion__triggerWrapper"
                  >
                    <button
                      aria-controls="generated-id"
                      aria-expanded={true}
                      className="euiAccordion__button kbnCollapsibleNav__solutionGroupButton"
                      id="generated-id"
                      onClick={[Function]}
                      type="button"
                    >
                      <span
                        className="euiAccordion__buttonContent"
                      >
                        <EuiFlexGroup
                          alignItems="center"
                          gutterSize="m"
                          responsive={false}
                        >
                          <div
                            className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
                          >
                            <EuiFlexItem
                              grow={false}
                            >
                              <div
                                className="euiFlexItem euiFlexItem--flexGrowZero"
                              >
                                <EuiIcon
                                  size="m"
                                  type="logoObservability"
                                >
                                  <span
                                    data-euiicon-type="logoObservability"
                                    size="m"
                                  />
                                </EuiIcon>
                              </div>
                            </EuiFlexItem>
                            <EuiFlexItem>
                              <div
                                className="euiFlexItem"
                              >
                                <EuiTitle
                                  size="xxs"
                                >
                                  <h3
                                    className="euiTitle euiTitle--xxsmall euiCollapsibleNavGroup__title"
                                    id="generated-id__title"
                                  >
                                    Observability
                                  </h3>
                                </EuiTitle>
                              </div>
                            </EuiFlexItem>
                          </div>
                        </EuiFlexGroup>
                      </span>
                    </button>
                    <EuiButtonIcon
                      aria-controls="generated-id"
                      aria-expanded={true}
                      aria-labelledby="generated-id"
                      className="euiAccordion__iconButton euiAccordion__iconButton-isOpen euiAccordion__iconButton--right"
                      color="text"
                      iconType="arrowRight"
                      onClick={[Function]}
                      tabIndex={-1}
                    >
                      <button
                        aria-controls="generated-id"
                        aria-expanded={true}
                        aria-labelledby="generated-id"
                        className="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiAccordion__iconButton euiAccordion__iconButton-isOpen euiAccordion__iconButton--right"
                        onClick={[Function]}
                        tabIndex={-1}
                        type="button"
                      >
                        <EuiIcon
                          aria-hidden="true"
                          className="euiButtonIcon__icon"
                          color="inherit"
                          size="m"
                          type="arrowRight"
                        >
                          <span
                            aria-hidden="true"
                            className="euiButtonIcon__icon"
                            color="inherit"
                            data-euiicon-type="arrowRight"
                            size="m"
                          />
                        </EuiIcon>
                      </button>
                    </EuiButtonIcon>
                  </div>
                  <div
                    aria-labelledby="generated-id"
                    className="euiAccordion__childWrapper"
                    id="generated-id"
                    role="region"
                    tabIndex={-1}
                  >
                    <EuiResizeObserver
                      onResize={[Function]}
                    >
                      <div>
                        <div>
                          <div
                            className="euiCollapsibleNavGroup__children"
                          >
                            <EuiListGroup
                              aria-label="Primary navigation links, Observability"
                              color="subdued"
                              gutterSize="none"
                              listItems={
                                Array [
                                  Object {
                                    "data-test-subj": "collapsibleNavAppLink",
                                    "href": "metrics",
                                    "isActive": false,
                                    "isDisabled": undefined,
                                    "label": "metrics",
                                    "onClick": [Function],
                                  },
                                  Object {
                                    "data-test-subj": "collapsibleNavAppLink",
                                    "href": "logs",
                                    "isActive": false,
                                    "isDisabled": undefined,
                                    "label": "logs",
                                    "onClick": [Function],
                                  },
                                ]
                              }
                              maxWidth="none"
                              size="s"
                            >
                              <ul
                                aria-label="Primary navigation links, Observability"
                                className="euiListGroup"
                                style={
                                  Object {
                                    "maxWidth": "none",
                                  }
                                }
                              >
                                <EuiListGroupItem
                                  color="subdued"
                                  data-test-subj="collapsibleNavAppLink"
                                  href="metrics"
                                  isActive={false}
                                  key="title-0"
                                  label="metrics"
                                  onClick={[Function]}
                                  showToolTip={false}
                                  size="s"
                                  wrapText={false}
                                >
                                  <li
                                    className="euiListGroupItem euiListGroupItem--small euiListGroupItem--subdued euiListGroupItem-isClickable"
                                  >
                                    <a
                                      className="euiListGroupItem__button"
                                      data-test-subj="collapsibleNavAppLink"
                                      href="metrics"
                                      onClick={[Function]}
                                      rel="noreferrer"
                                    >
                                      <span
                                        className="euiListGroupItem__label"
                                        title="metrics"
                                      >
                                        metrics
                                      </span>
                                    </a>
                                  </li>
                                </EuiListGroupItem>
                                <EuiListGroupItem
                                  color="subdued"
                                  data-test-subj="collapsibleNavAppLink"
                                  href="logs"
                                  isActive={false}
                                  key="title-1"
                                  label="logs"
                                  onClick={[Function]}
                                  showToolTip={false}
                                  size="s"
                                  wrapText={false}
                                >
                                  <li
                                    className="euiListGroupItem euiListGroupItem--small euiListGroupItem--subdued euiListGroupItem-isClickable"
                                  >
                                    <a
                                      className="euiListGroupItem__button"
                                      data-test-subj="collapsibleNavAppLink"
                                      href="logs"
                                      onClick={[Function]}
                                      rel="noreferrer"
                                    >
                                      <span
                                        className="euiListGroupItem__label"
                                        title="logs"
                                      >
                                        logs
                                      </span>
                                    </a>
                                  </li>
                                </EuiListGroupItem>
                              </ul>
                            </EuiListGroup>
                          </div>
                        </div>
                      </div>
                    </EuiResizeObserver>
                  </div>
                </div>
              </EuiAccordion>
            </EuiCollapsibleNavGroup>
            <EuiCollapsibleNavGroup
              buttonClassName="kbnCollapsibleNav__solutionGroupButton"
              buttonElement="button"
              data-test-subj="collapsibleNavGroup-securitySolution"
              iconSize="m"
              iconType="logoSecurity"
              initialIsOpen={true}
              isCollapsible={true}
              key="securitySolution"
              onToggle={[Function]}
              title="Security"
            >
              <EuiAccordion
                arrowDisplay="right"
                arrowProps={
                  Object {
                    "color": "text",
                  }
                }
                buttonClassName="kbnCollapsibleNav__solutionGroupButton"
                buttonContent={
                  <EuiFlexGroup
                    alignItems="center"
                    gutterSize="m"
                    responsive={false}
                  >
                    <EuiFlexItem
                      grow={false}
                    >
                      <EuiIcon
                        size="m"
                        type="logoSecurity"
                      />
                    </EuiFlexItem>
                    <EuiFlexItem>
                      <EuiTitle
                        size="xxs"
                      >
                        <h3
                          className="euiCollapsibleNavGroup__title"
                          id="generated-id__title"
                        >
                          Security
                        </h3>
                      </EuiTitle>
                    </EuiFlexItem>
                  </EuiFlexGroup>
                }
                buttonElement="button"
                className="euiCollapsibleNavGroup euiCollapsibleNavGroup--withHeading"
                data-test-subj="collapsibleNavGroup-securitySolution"
                element="div"
                id="generated-id"
                initialIsOpen={true}
                isLoading={false}
                isLoadingMessage={false}
                onToggle={[Function]}
                paddingSize="none"
              >
                <div
                  className="euiAccordion euiAccordion-isOpen euiCollapsibleNavGroup euiCollapsibleNavGroup--withHeading"
                  data-test-subj="collapsibleNavGroup-securitySolution"
                  onToggle={[Function]}
                >
                  <div
                    className="euiAccordion__triggerWrapper"
                  >
                    <button
                      aria-controls="generated-id"
                      aria-expanded={true}
                      className="euiAccordion__button kbnCollapsibleNav__solutionGroupButton"
                      id="generated-id"
                      onClick={[Function]}
                      type="button"
                    >
                      <span
                        className="euiAccordion__buttonContent"
                      >
                        <EuiFlexGroup
                          alignItems="center"
                          gutterSize="m"
                          responsive={false}
                        >
                          <div
                            className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
                          >
                            <EuiFlexItem
                              grow={false}
                            >
                              <div
                                className="euiFlexItem euiFlexItem--flexGrowZero"
                              >
                                <EuiIcon
                                  size="m"
                                  type="logoSecurity"
                                >
                                  <span
                                    data-euiicon-type="logoSecurity"
                                    size="m"
                                  />
                                </EuiIcon>
                              </div>
                            </EuiFlexItem>
                            <EuiFlexItem>
                              <div
                                className="euiFlexItem"
                              >
                                <EuiTitle
                                  size="xxs"
                                >
                                  <h3
                                    className="euiTitle euiTitle--xxsmall euiCollapsibleNavGroup__title"
                                    id="generated-id__title"
                                  >
                                    Security
                                  </h3>
                                </EuiTitle>
                              </div>
                            </EuiFlexItem>
                          </div>
                        </EuiFlexGroup>
                      </span>
                    </button>
                    <EuiButtonIcon
                      aria-controls="generated-id"
                      aria-expanded={true}
                      aria-labelledby="generated-id"
                      className="euiAccordion__iconButton euiAccordion__iconButton-isOpen euiAccordion__iconButton--right"
                      color="text"
                      iconType="arrowRight"
                      onClick={[Function]}
                      tabIndex={-1}
                    >
                      <button
                        aria-controls="generated-id"
                        aria-expanded={true}
                        aria-labelledby="generated-id"
                        className="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiAccordion__iconButton euiAccordion__iconButton-isOpen euiAccordion__iconButton--right"
                        onClick={[Function]}
                        tabIndex={-1}
                        type="button"
                      >
                        <EuiIcon
                          aria-hidden="true"
                          className="euiButtonIcon__icon"
                          color="inherit"
                          size="m"
                          type="arrowRight"
                        >
                          <span
                            aria-hidden="true"
                            className="euiButtonIcon__icon"
                            color="inherit"
                            data-euiicon-type="arrowRight"
                            size="m"
                          />
                        </EuiIcon>
                      </button>
                    </EuiButtonIcon>
                  </div>
                  <div
                    aria-labelledby="generated-id"
                    className="euiAccordion__childWrapper"
                    id="generated-id"
                    role="region"
                    tabIndex={-1}
                  >
                    <EuiResizeObserver
                      onResize={[Function]}
                    >
                      <div>
                        <div>
                          <div
                            className="euiCollapsibleNavGroup__children"
                          >
                            <EuiListGroup
                              aria-label="Primary navigation links, Security"
                              color="subdued"
                              gutterSize="none"
                              listItems={
                                Array [
                                  Object {
                                    "data-test-subj": "collapsibleNavAppLink",
                                    "href": "siem",
                                    "isActive": false,
                                    "isDisabled": undefined,
                                    "label": "siem",
                                    "onClick": [Function],
                                  },
                                ]
                              }
                              maxWidth="none"
                              size="s"
                            >
                              <ul
                                aria-label="Primary navigation links, Security"
                                className="euiListGroup"
                                style={
                                  Object {
                                    "maxWidth": "none",
                                  }
                                }
                              >
                                <EuiListGroupItem
                                  color="subdued"
                                  data-test-subj="collapsibleNavAppLink"
                                  href="siem"
                                  isActive={false}
                                  key="title-0"
                                  label="siem"
                                  onClick={[Function]}
                                  showToolTip={false}
                                  size="s"
                                  wrapText={false}
                                >
                                  <li
                                    className="euiListGroupItem euiListGroupItem--small euiListGroupItem--subdued euiListGroupItem-isClickable"
                                  >
                                    <a
                                      className="euiListGroupItem__button"
                                      data-test-subj="collapsibleNavAppLink"
                                      href="siem"
                                      onClick={[Function]}
                                      rel="noreferrer"
                                    >
                                      <span
                                        className="euiListGroupItem__label"
                                        title="siem"
                                      >
                                        siem
                                      </span>
                                    </a>
                                  </li>
                                </EuiListGroupItem>
                              </ul>
                            </EuiListGroup>
                          </div>
                        </div>
                      </div>
                    </EuiResizeObserver>
                  </div>
                </div>
              </EuiAccordion>
            </EuiCollapsibleNavGroup>
            <EuiCollapsibleNavGroup
              buttonClassName="kbnCollapsibleNav__solutionGroupButton"
              buttonElement="button"
              data-test-subj="collapsibleNavGroup-management"
              iconSize="m"
              iconType="managementApp"
              initialIsOpen={true}
              isCollapsible={true}
              key="management"
              onToggle={[Function]}
              title="Management"
            >
              <EuiAccordion
                arrowDisplay="right"
                arrowProps={
                  Object {
                    "color": "text",
                  }
                }
                buttonClassName="kbnCollapsibleNav__solutionGroupButton"
                buttonContent={
                  <EuiFlexGroup
                    alignItems="center"
                    gutterSize="m"
                    responsive={false}
                  >
                    <EuiFlexItem
                      grow={false}
                    >
                      <EuiIcon
                        size="m"
                        type="managementApp"
                      />
                    </EuiFlexItem>
                    <EuiFlexItem>
                      <EuiTitle
                        size="xxs"
                      >
                        <h3
                          className="euiCollapsibleNavGroup__title"
                          id="generated-id__title"
                        >
                          Management
                        </h3>
                      </EuiTitle>
                    </EuiFlexItem>
                  </EuiFlexGroup>
                }
                buttonElement="button"
                className="euiCollapsibleNavGroup euiCollapsibleNavGroup--withHeading"
                data-test-subj="collapsibleNavGroup-management"
                element="div"
                id="generated-id"
                initialIsOpen={true}
                isLoading={false}
                isLoadingMessage={false}
                onToggle={[Function]}
                paddingSize="none"
              >
                <div
                  className="euiAccordion euiAccordion-isOpen euiCollapsibleNavGroup euiCollapsibleNavGroup--withHeading"
                  data-test-subj="collapsibleNavGroup-management"
                  onToggle={[Function]}
                >
                  <div
                    className="euiAccordion__triggerWrapper"
                  >
                    <button
                      aria-controls="generated-id"
                      aria-expanded={true}
                      className="euiAccordion__button kbnCollapsibleNav__solutionGroupButton"
                      id="generated-id"
                      onClick={[Function]}
                      type="button"
                    >
                      <span
                        className="euiAccordion__buttonContent"
                      >
                        <EuiFlexGroup
                          alignItems="center"
                          gutterSize="m"
                          responsive={false}
                        >
                          <div
                            className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
                          >
                            <EuiFlexItem
                              grow={false}
                            >
                              <div
                                className="euiFlexItem euiFlexItem--flexGrowZero"
                              >
                                <EuiIcon
                                  size="m"
                                  type="managementApp"
                                >
                                  <span
                                    data-euiicon-type="managementApp"
                                    size="m"
                                  />
                                </EuiIcon>
                              </div>
                            </EuiFlexItem>
                            <EuiFlexItem>
                              <div
                                className="euiFlexItem"
                              >
                                <EuiTitle
                                  size="xxs"
                                >
                                  <h3
                                    className="euiTitle euiTitle--xxsmall euiCollapsibleNavGroup__title"
                                    id="generated-id__title"
                                  >
                                    Management
                                  </h3>
                                </EuiTitle>
                              </div>
                            </EuiFlexItem>
                          </div>
                        </EuiFlexGroup>
                      </span>
                    </button>
                    <EuiButtonIcon
                      aria-controls="generated-id"
                      aria-expanded={true}
                      aria-labelledby="generated-id"
                      className="euiAccordion__iconButton euiAccordion__iconButton-isOpen euiAccordion__iconButton--right"
                      color="text"
                      iconType="arrowRight"
                      onClick={[Function]}
                      tabIndex={-1}
                    >
                      <button
                        aria-controls="generated-id"
                        aria-expanded={true}
                        aria-labelledby="generated-id"
                        className="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiAccordion__iconButton euiAccordion__iconButton-isOpen euiAccordion__iconButton--right"
                        onClick={[Function]}
                        tabIndex={-1}
                        type="button"
                      >
                        <EuiIcon
                          aria-hidden="true"
                          className="euiButtonIcon__icon"
                          color="inherit"
                          size="m"
                          type="arrowRight"
                        >
                          <span
                            aria-hidden="true"
                            className="euiButtonIcon__icon"
                            color="inherit"
                            data-euiicon-type="arrowRight"
                            size="m"
                          />
                        </EuiIcon>
                      </button>
                    </EuiButtonIcon>
                  </div>
                  <div
                    aria-labelledby="generated-id"
                    className="euiAccordion__childWrapper"
                    id="generated-id"
                    role="region"
                    tabIndex={-1}
                  >
                    <EuiResizeObserver
                      onResize={[Function]}
                    >
                      <div>
                        <div>
                          <div
                            className="euiCollapsibleNavGroup__children"
                          >
                            <EuiListGroup
                              aria-label="Primary navigation links, Management"
                              color="subdued"
                              gutterSize="none"
                              listItems={
                                Array [
                                  Object {
                                    "data-test-subj": "collapsibleNavAppLink",
                                    "href": "monitoring",
                                    "isActive": false,
                                    "isDisabled": undefined,
                                    "label": "monitoring",
                                    "onClick": [Function],
                                  },
                                ]
                              }
                              maxWidth="none"
                              size="s"
                            >
                              <ul
                                aria-label="Primary navigation links, Management"
                                className="euiListGroup"
                                style={
                                  Object {
                                    "maxWidth": "none",
                                  }
                                }
                              >
                                <EuiListGroupItem
                                  color="subdued"
                                  data-test-subj="collapsibleNavAppLink"
                                  href="monitoring"
                                  isActive={false}
                                  key="title-0"
                                  label="monitoring"
                                  onClick={[Function]}
                                  showToolTip={false}
                                  size="s"
                                  wrapText={false}
                                >
                                  <li
                                    className="euiListGroupItem euiListGroupItem--small euiListGroupItem--subdued euiListGroupItem-isClickable"
                                  >
                                    <a
                                      className="euiListGroupItem__button"
                                      data-test-subj="collapsibleNavAppLink"
                                      href="monitoring"
                                      onClick={[Function]}
                                      rel="noreferrer"
                                    >
                                      <span
                                        className="euiListGroupItem__label"
                                        title="monitoring"
                                      >
                                        monitoring
                                      </span>
                                    </a>
                                  </li>
                                </EuiListGroupItem>
                              </ul>
                            </EuiListGroup>
                          </div>
                        </div>
                      </div>
                    </EuiResizeObserver>
                  </div>
                </div>
              </EuiAccordion>
            </EuiCollapsibleNavGroup>
            <EuiCollapsibleNavGroup
              data-test-subj="collapsibleNavGroup-noCategory"
              key="0"
            >
              <div
                className="euiCollapsibleNavGroup"
                data-test-subj="collapsibleNavGroup-noCategory"
                id="generated-id"
              >
                <div
                  className="euiCollapsibleNavGroup__children"
                >
                  <EuiListGroup
                    flush={true}
                  >
                    <ul
                      className="euiListGroup euiListGroup-flush euiListGroup--gutterSmall euiListGroup-maxWidthDefault"
                    >
                      <EuiListGroupItem
                        color="text"
                        data-test-subj="collapsibleNavAppLink"
                        href="canvas"
                        isActive={false}
                        label="canvas"
                        onClick={[Function]}
                        size="s"
                      >
                        <li
                          className="euiListGroupItem euiListGroupItem--small euiListGroupItem--text euiListGroupItem-isClickable"
                        >
                          <a
                            className="euiListGroupItem__button"
                            data-test-subj="collapsibleNavAppLink"
                            href="canvas"
                            onClick={[Function]}
                            rel="noreferrer"
                          >
                            <span
                              className="euiListGroupItem__label"
                              title="canvas"
                            >
                              canvas
                            </span>
                          </a>
                        </li>
                      </EuiListGroupItem>
                    </ul>
                  </EuiListGroup>
                </div>
              </div>
            </EuiCollapsibleNavGroup>
          </div>
        </EuiFlexItem>
      </nav>
    </EuiFlyout>
  </EuiCollapsibleNav>
</CollapsibleNav>
`;

exports[`CollapsibleNav renders the default nav 1`] = `
<CollapsibleNav
  appId$={
    BehaviorSubject {
      "_isScalar": false,
      "_value": "test",
      "closed": false,
      "hasError": false,
      "isStopped": false,
      "observers": Array [
        Subscriber {
          "_parentOrParents": null,
          "_subscriptions": Array [
            SubjectSubscription {
              "_parentOrParents": [Circular],
              "_subscriptions": null,
              "closed": false,
              "subject": [Circular],
              "subscriber": [Circular],
            },
          ],
          "closed": false,
          "destination": SafeSubscriber {
            "_complete": undefined,
            "_context": [Circular],
            "_error": undefined,
            "_next": [Function],
            "_parentOrParents": null,
            "_parentSubscriber": [Circular],
            "_subscriptions": null,
            "closed": false,
            "destination": Object {
              "closed": true,
              "complete": [Function],
              "error": [Function],
              "next": [Function],
            },
            "isStopped": false,
            "syncErrorThrowable": false,
            "syncErrorThrown": false,
            "syncErrorValue": null,
          },
          "isStopped": false,
          "syncErrorThrowable": true,
          "syncErrorThrown": false,
          "syncErrorValue": null,
        },
      ],
      "thrownError": null,
    }
  }
  basePath={
    BasePath {
      "basePath": "/test",
      "get": [Function],
      "prepend": [Function],
      "publicBaseUrl": undefined,
      "remove": [Function],
      "serverBasePath": "/test",
    }
  }
  button={<button />}
  closeNav={[Function]}
  customNavLink$={
    BehaviorSubject {
      "_isScalar": false,
      "_value": undefined,
      "closed": false,
      "hasError": false,
      "isStopped": false,
      "observers": Array [
        Subscriber {
          "_parentOrParents": null,
          "_subscriptions": Array [
            SubjectSubscription {
              "_parentOrParents": [Circular],
              "_subscriptions": null,
              "closed": false,
              "subject": [Circular],
              "subscriber": [Circular],
            },
          ],
          "closed": false,
          "destination": SafeSubscriber {
            "_complete": undefined,
            "_context": [Circular],
            "_error": undefined,
            "_next": [Function],
            "_parentOrParents": null,
            "_parentSubscriber": [Circular],
            "_subscriptions": null,
            "closed": false,
            "destination": Object {
              "closed": true,
              "complete": [Function],
              "error": [Function],
              "next": [Function],
            },
            "isStopped": false,
            "syncErrorThrowable": false,
            "syncErrorThrown": false,
            "syncErrorValue": null,
          },
          "isStopped": false,
          "syncErrorThrowable": true,
          "syncErrorThrown": false,
          "syncErrorValue": null,
        },
      ],
      "thrownError": null,
    }
  }
  homeHref="/"
  id="collapsibe-nav"
  isLocked={false}
  isNavOpen={false}
  navLinks$={
    BehaviorSubject {
      "_isScalar": false,
      "_value": Array [],
      "closed": false,
      "hasError": false,
      "isStopped": false,
      "observers": Array [
        Subscriber {
          "_parentOrParents": null,
          "_subscriptions": Array [
            SubjectSubscription {
              "_parentOrParents": [Circular],
              "_subscriptions": null,
              "closed": false,
              "subject": [Circular],
              "subscriber": [Circular],
            },
          ],
          "closed": false,
          "destination": SafeSubscriber {
            "_complete": undefined,
            "_context": [Circular],
            "_error": undefined,
            "_next": [Function],
            "_parentOrParents": null,
            "_parentSubscriber": [Circular],
            "_subscriptions": null,
            "closed": false,
            "destination": Object {
              "closed": true,
              "complete": [Function],
              "error": [Function],
              "next": [Function],
            },
            "isStopped": false,
            "syncErrorThrowable": false,
            "syncErrorThrown": false,
            "syncErrorValue": null,
          },
          "isStopped": false,
          "syncErrorThrowable": true,
          "syncErrorThrown": false,
          "syncErrorValue": null,
        },
      ],
      "thrownError": null,
    }
  }
  navigateToApp={[Function]}
  navigateToUrl={[Function]}
  onIsLockedUpdate={[Function]}
  recentlyAccessed$={
    BehaviorSubject {
      "_isScalar": false,
      "_value": Array [],
      "closed": false,
      "hasError": false,
      "isStopped": false,
      "observers": Array [
        Subscriber {
          "_parentOrParents": null,
          "_subscriptions": Array [
            SubjectSubscription {
              "_parentOrParents": [Circular],
              "_subscriptions": null,
              "closed": false,
              "subject": [Circular],
              "subscriber": [Circular],
            },
          ],
          "closed": false,
          "destination": SafeSubscriber {
            "_complete": undefined,
            "_context": [Circular],
            "_error": undefined,
            "_next": [Function],
            "_parentOrParents": null,
            "_parentSubscriber": [Circular],
            "_subscriptions": null,
            "closed": false,
            "destination": Object {
              "closed": true,
              "complete": [Function],
              "error": [Function],
              "next": [Function],
            },
            "isStopped": false,
            "syncErrorThrowable": false,
            "syncErrorThrown": false,
            "syncErrorValue": null,
          },
          "isStopped": false,
          "syncErrorThrowable": true,
          "syncErrorThrown": false,
          "syncErrorValue": null,
        },
      ],
      "thrownError": null,
    }
  }
  storage={
    StubBrowserStorage {
      "keys": Array [],
      "size": 0,
      "sizeLimit": 5000000,
      "values": Array [],
    }
  }
  url="/"
>
  <EuiCollapsibleNav
    aria-label="Primary"
    button={<button />}
    data-test-subj="collapsibleNav"
    id="collapsibe-nav"
    isOpen={false}
    onClose={[Function]}
    ownFocus={false}
    size={248}
  >
    <button
      aria-controls="collapsibe-nav"
      aria-expanded={false}
      aria-pressed={false}
      onMouseUpCapture={[Function]}
      onTouchEnd={[Function]}
    />
  </EuiCollapsibleNav>
</CollapsibleNav>
`;

exports[`CollapsibleNav renders the default nav 2`] = `
<CollapsibleNav
  appId$={
    BehaviorSubject {
      "_isScalar": false,
      "_value": "test",
      "closed": false,
      "hasError": false,
      "isStopped": false,
      "observers": Array [
        Subscriber {
          "_parentOrParents": null,
          "_subscriptions": Array [
            SubjectSubscription {
              "_parentOrParents": [Circular],
              "_subscriptions": null,
              "closed": false,
              "subject": [Circular],
              "subscriber": [Circular],
            },
          ],
          "closed": false,
          "destination": SafeSubscriber {
            "_complete": undefined,
            "_context": [Circular],
            "_error": undefined,
            "_next": [Function],
            "_parentOrParents": null,
            "_parentSubscriber": [Circular],
            "_subscriptions": null,
            "closed": false,
            "destination": Object {
              "closed": true,
              "complete": [Function],
              "error": [Function],
              "next": [Function],
            },
            "isStopped": false,
            "syncErrorThrowable": false,
            "syncErrorThrown": false,
            "syncErrorValue": null,
          },
          "isStopped": false,
          "syncErrorThrowable": true,
          "syncErrorThrown": false,
          "syncErrorValue": null,
        },
      ],
      "thrownError": null,
    }
  }
  basePath={
    BasePath {
      "basePath": "/test",
      "get": [Function],
      "prepend": [Function],
      "publicBaseUrl": undefined,
      "remove": [Function],
      "serverBasePath": "/test",
    }
  }
  button={<button />}
  closeNav={[Function]}
  customNavLink$={
    BehaviorSubject {
      "_isScalar": false,
      "_value": undefined,
      "closed": false,
      "hasError": false,
      "isStopped": false,
      "observers": Array [
        Subscriber {
          "_parentOrParents": null,
          "_subscriptions": Array [
            SubjectSubscription {
              "_parentOrParents": [Circular],
              "_subscriptions": null,
              "closed": false,
              "subject": [Circular],
              "subscriber": [Circular],
            },
          ],
          "closed": false,
          "destination": SafeSubscriber {
            "_complete": undefined,
            "_context": [Circular],
            "_error": undefined,
            "_next": [Function],
            "_parentOrParents": null,
            "_parentSubscriber": [Circular],
            "_subscriptions": null,
            "closed": false,
            "destination": Object {
              "closed": true,
              "complete": [Function],
              "error": [Function],
              "next": [Function],
            },
            "isStopped": false,
            "syncErrorThrowable": false,
            "syncErrorThrown": false,
            "syncErrorValue": null,
          },
          "isStopped": false,
          "syncErrorThrowable": true,
          "syncErrorThrown": false,
          "syncErrorValue": null,
        },
      ],
      "thrownError": null,
    }
  }
  homeHref="/"
  id="collapsibe-nav"
  isLocked={false}
  isNavOpen={false}
  isOpen={true}
  navLinks$={
    BehaviorSubject {
      "_isScalar": false,
      "_value": Array [],
      "closed": false,
      "hasError": false,
      "isStopped": false,
      "observers": Array [
        Subscriber {
          "_parentOrParents": null,
          "_subscriptions": Array [
            SubjectSubscription {
              "_parentOrParents": [Circular],
              "_subscriptions": null,
              "closed": false,
              "subject": [Circular],
              "subscriber": [Circular],
            },
          ],
          "closed": false,
          "destination": SafeSubscriber {
            "_complete": undefined,
            "_context": [Circular],
            "_error": undefined,
            "_next": [Function],
            "_parentOrParents": null,
            "_parentSubscriber": [Circular],
            "_subscriptions": null,
            "closed": false,
            "destination": Object {
              "closed": true,
              "complete": [Function],
              "error": [Function],
              "next": [Function],
            },
            "isStopped": false,
            "syncErrorThrowable": false,
            "syncErrorThrown": false,
            "syncErrorValue": null,
          },
          "isStopped": false,
          "syncErrorThrowable": true,
          "syncErrorThrown": false,
          "syncErrorValue": null,
        },
      ],
      "thrownError": null,
    }
  }
  navigateToApp={[Function]}
  navigateToUrl={[Function]}
  onIsLockedUpdate={[Function]}
  recentlyAccessed$={
    BehaviorSubject {
      "_isScalar": false,
      "_value": Array [],
      "closed": false,
      "hasError": false,
      "isStopped": false,
      "observers": Array [
        Subscriber {
          "_parentOrParents": null,
          "_subscriptions": Array [
            SubjectSubscription {
              "_parentOrParents": [Circular],
              "_subscriptions": null,
              "closed": false,
              "subject": [Circular],
              "subscriber": [Circular],
            },
          ],
          "closed": false,
          "destination": SafeSubscriber {
            "_complete": undefined,
            "_context": [Circular],
            "_error": undefined,
            "_next": [Function],
            "_parentOrParents": null,
            "_parentSubscriber": [Circular],
            "_subscriptions": null,
            "closed": false,
            "destination": Object {
              "closed": true,
              "complete": [Function],
              "error": [Function],
              "next": [Function],
            },
            "isStopped": false,
            "syncErrorThrowable": false,
            "syncErrorThrown": false,
            "syncErrorValue": null,
          },
          "isStopped": false,
          "syncErrorThrowable": true,
          "syncErrorThrown": false,
          "syncErrorValue": null,
        },
      ],
      "thrownError": null,
    }
  }
  storage={
    StubBrowserStorage {
      "keys": Array [],
      "size": 0,
      "sizeLimit": 5000000,
      "values": Array [],
    }
  }
  url="/"
>
  <EuiCollapsibleNav
    aria-label="Primary"
    button={<button />}
    data-test-subj="collapsibleNav"
    id="collapsibe-nav"
    isOpen={false}
    onClose={[Function]}
    ownFocus={false}
    size={248}
  >
    <button
      aria-controls="collapsibe-nav"
      aria-expanded={false}
      aria-pressed={false}
      onMouseUpCapture={[Function]}
      onTouchEnd={[Function]}
    />
  </EuiCollapsibleNav>
</CollapsibleNav>
`;
